Fix feedback board overlaping game board - Printer component

--- a/src/components/feedbackBoard/style.scss
+++ b/src/components/feedbackBoard/style.scss
@@ -5,7 +5,7 @@
     box-shadow: none;
     margin: 0;
     transform: scale(0.6);
-    transform-origin: 0 0;
+    transform-origin: 0 1px;
     table tr td {
       background-color: transparent;
       width: 18px;
